repair maj & shift

--- a/css/index.css
+++ b/css/index.css
@@ -6,3 +6,11 @@
     color: white;
     background-color: rgb(121, 121, 121);
 }
+
+.letter {
+    
+}
+
+.lettera {
+
+}
